--- a/hello_flutter - copia/pubspec.yaml
+++ b/hello_flutter - copia/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_mjpeg: ^2.0.0
+  web_socket_channel: ^2.4.0
   flutter_localizations:
     sdk: flutter   # <-- AGREGA ESTA LÍNEA
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: ^1.3.0 # <-- Agrega esta línea
+  http: 0.13.6 # <-- Agrega esta línea
   intl: ^0.19.0
 dev_dependencies:
   flutter_test:
